💄 Fix z-index for Jingle label

--- a/kmfrontend/src/frontend/components/modals/ShutdownModal.scss
+++ b/kmfrontend/src/frontend/components/modals/ShutdownModal.scss
@@ -8,7 +8,7 @@
 	height: 100%;
 	color: #dededeed;
 	background-color: #000000c2;
-	z-index: 999999;
+	z-index: 10003;
 	text-align: center;
 	font-size: 2.5rem;
 	text-shadow: 2px 2px 19px #e6e6e66b;
